--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -54,91 +54,86 @@
     <!--content-->
     <main>
         <div class="container-fluid" id="poster"></div>
-        <div class="container">
-            <div class="row">
-
-
-                <div class="jumbotron">
-                    <div class="container">
-                        <h2>物联网创意大赛 - 简介</h2>
-                        <p class="lead">灵动物联，汇聚创新</p>
-                        <hr class="m-y-md">
-                        <p class="text">物联网创意大赛，以科技改变生活为主题，目的在于充分激发学生的想象力和创新意识，促使同学们结合对物联网的理解，
-                            针对（智慧地球、智能家居、智能医疗、智能农业、智慧校园、智慧交通、食品安全、安防犯罪）等领域，
-                            提出自己的创意想法或优化方案，旨在激发学生积极参与物联网知识学习与创新的热情，提升学生在物联网技术相关领域的应用和实践能力，
-                            推进物联网相关专业的教学内容和教学方法的改革与创新，促进高校物联网相关技术的研究和成果转化。
-                        </p>
-                    </div>
-                </div>
-
+        <div class="jumbotron">
+            <div class="container">
+                <h2>物联网创意大赛 - 简介</h2>
+                <p class="lead">灵动物联，汇聚创新</p>
+                <hr class="m-y-md">
+                <p class="text">物联网创意大赛，以科技改变生活为主题，目的在于充分激发学生的想象力和创新意识，促使同学们结合对物联网的理解，
+                    针对（智慧地球、智能家居、智能医疗、智能农业、智慧校园、智慧交通、食品安全、安防犯罪）等领域，
+                    提出自己的创意想法或优化方案，旨在激发学生积极参与物联网知识学习与创新的热情，提升学生在物联网技术相关领域的应用和实践能力，
+                    推进物联网相关专业的教学内容和教学方法的改革与创新，促进高校物联网相关技术的研究和成果转化。
+                </p>
             </div>
-            <div class="row">
-                <div class="jumbotron">
-                    <div class="container">
-                        <h2>比赛流程</h2>
-                        <hr class="m-y-md">
-                        <dl>
-                            <dt><button class="btn btn-primary">组队</button></dt>
-                            <dd>参赛人员自行组队以小组（1~3人）为单位
-                                针对某一实际应用场景或物品，运用物联网相关思想，提出自己的创新或优化想法
-                            </dd>
-                            <dt><button class="btn btn-success">报名</button></dt>
-                            <dd>报名时间为：*年*月*日<br/>通过大赛网站：#进行报名并提交创意方案</dd>
+        </div>
+        <div class="jumbotron">
+            <div class="container">
+                <h2>比赛流程</h2>
+                <p class="lead">灵动物联，汇聚创新</p>
+                <hr class="m-y-md">
+                <dl class="col-md-12">
+                    <dt><button class="btn btn-primary">组队</button></dt>
+                    <dd>参赛人员自行组队以小组（1~3人）为单位
+                        针对某一实际应用场景或物品，运用物联网相关思想，提出自己的创新或优化想法
+                    </dd>
+                    <dt><button class="btn btn-success">报名</button></dt>
+                    <dd>报名时间为：*年*月*日<br/>通过大赛网站：#进行报名并提交创意方案</dd>
 
-                            <dt><button class="btn btn-info">初选</button></dt>
-                            <dd>初赛采用线上竞赛,经评审委员会评审作品，择日公布初赛结果.</dd>
-                            <dt><button class="btn btn-warning">决赛</button></dt>
-                            <dd>总决赛采取集中竞赛的方式，在规定时间内进行创意答辩，评审委员会评选总决赛优胜团队颁发奖品证书。</dd>
-                        </dl>
-                    </div>
-
-                </div>
+                    <dt><button class="btn btn-info">初选</button></dt>
+                    <dd>初赛采用线上竞赛,经评审委员会评审作品，择日公布初赛结果.</dd>
+                    <dt><button class="btn btn-warning">决赛</button></dt>
+                    <dd>总决赛采取集中竞赛的方式，在规定时间内进行创意答辩，评审委员会评选总决赛优胜团队颁发奖品证书。</dd>
+                </dl>
             </div>
-            <div class="row">
-                <div class="jumbotron">
-                    <div class="container">
-                        <h2>风采展示</h2>
-                        <hr class="m-y-md">
-                        <div class="row">
+        </div>
+        <div class="jumbotron">
+            <div class="container">
+                <h2>风采展示</h2>
+                <p class="lead">灵动物联，汇聚创新</p>
+                <hr class="m-y-md">
+                <div class="row">
 
 
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-p1.jpg">
-                                    <div class="caption">
-                                        <p class="text-primary"><b>特等奖</b>
-                                        <a href="#" class="btn btn-block btn-sm text-sm-left btn-warning" role="button">
-                                            learn more...
-                                        </a>
-                                        </p>
-                                    </div>
-                                </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-p1.jpg">
+                            <div class="caption">
+                                <p>
+                                    <b>特等奖</b><br/>
+                                    <span>
+
+                                王俊沣<br/>
+                                通过智能手环提前检测癫痫发作时间<br/>
+                                </span>
+                                </p>
                             </div>
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-p2.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>一等奖</b><br/>
-                                            <span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-p2.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>一等奖</b><br/>
+                                    <span>
 
                                 葛芮琪 马思诺<br/>
                                 盲人及视力障碍患者可用的智能手环及智能耳机<br/>
                                 </span>
-                                        </p>
+                                </p>
 
-                                    </div>
-                                </div>
                             </div>
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-p3.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>二等奖</b><br />
-                                            <span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-p3.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>二等奖</b><br />
+                                    <span>
 
                                 李浩杰：
                                 自动售饭机<br />
@@ -146,19 +141,19 @@
                                 苗栋：
                                 Super Doctor自动诊断机<br />
                             </span>
-                                        </p>
+                                </p>
 
-                                    </div>
-                                </div>
                             </div>
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-p4.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>三等奖</b><br />
-                                            <span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-p4.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>三等奖</b><br />
+                                    <span>
 
                                 王磊<br/>
                                 公交车乘客密度实时监测<br/><br />
@@ -169,22 +164,22 @@
                                 廖小瑶 吴思琪 邓梦涵<br />
                                 Magic mirror<br />
                             </span>
-                                        </p>
+                                </p>
 
-                                    </div>
-                                </div>
                             </div>
                         </div>
-                        <div class="row">
+                    </div>
+                </div>
+                <div class="row">
 
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-p4.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>优胜奖</b><br/>
-                                            <span>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-p4.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>优胜奖</b><br/>
+                                    <span>
                                 张海洋 熊小预:
                                 智能书包<br/>
 
@@ -197,102 +192,96 @@
                                 王智博 李超:
                                 基于局域网的手机物联控制<br />
                             </span>
-                                        </p>
+                                </p>
 
-                                    </div>
-                                </div>
                             </div>
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-teacher.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>评委老师</b><br />
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-teacher.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>评委老师</b><br />
 
-                                        </p>
+                                </p>
 
-                                    </div>
-                                </div>
                             </div>
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-competitor.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>参赛选手</b><br />
-                                            <span>所有参赛选手的合影</span>
-                                        </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-competitor.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>参赛选手</b><br />
+                                    <span>所有参赛选手的合影</span>
+                                </p>
 
-                                    </div>
-                                </div>
                             </div>
-                            <div class="col-sm-6 col-md-3">
-                                <div class="thumbnail">
-                                    <img src="../public/img/s-worker.jpg"
-                                    >
-                                    <div class="caption">
-                                        <p>
-                                            <b>翼灵成员</b><br /><br />
-                                            <span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="thumbnail">
+                            <img src="../public/img/s-worker.jpg"
+                            >
+                            <div class="caption">
+                                <p>
+                                    <b>翼灵成员</b><br /><br />
+                                    <span>
                                 翼灵团队的所有成员和评委老师的合影
                             </span>
-                                        </p>
-                                    </div>
-                                </div>
+                                </p>
                             </div>
-
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="row">
-                <div class="jumbotron">
-                    <div class="container">
-                        <h2>报名参赛</h2>
-                        <p class="lead">灵动物联，汇聚创新</p>
-                        <hr class="m-y-md">
-                        <form action="" method="post" role="form">
-                            <div class="form-group">
-                                <label for="name" class="control-label">姓名</label>
-                                <input type="text" class="form-control" id="name" placeholder="请输入名字">
+        </div>
+        <div class="jumbotron">
+            <div class="container">
+                <h2>报名参赛</h2>
+                <p class="lead">灵动物联，汇聚创新</p>
+                <hr class="m-y-md">
+                <form action="" method="post" role="form">
+                        <div class="form-group">
+                            <label for="name" class="control-label">姓名</label>
+                            <input type="text" class="form-control" id="name" placeholder="请输入名字">
+                        </div>
+                        <div class="form-group">
+                            <label for="major" class="control-label">专业</label>
+                            <input type="text" class="form-control" id="major" placeholder="请输入专业">
+                        </div>
+                        <div class="form-group">
+                            <p>年级</p>
+                            <div>
+                                <label class="radio-inline">
+                                    <input type="radio" name="options-grade" id="optionsRadios1" value="大一" checked>大一
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="options-grade" id="optionsRadios2"  value="大二"> 大二
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="options-grade" id="optionsRadios3"  value="大三"> 大三
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="options-grade" id="optionsRadios4"  value="大四"> 大四
+                                </label>
                             </div>
-                            <div class="form-group">
-                                <label for="major" class="control-label">专业</label>
-                                <input type="text" class="form-control" id="major" placeholder="请输入专业">
+                        </div>
+                        <div class="form-group">
+                            <div class="text-left">
+                                <button class="btn btn-info">下载报名表</button>
+                                <label for="file">上传报名表<input type="file" id="file"/></label>
                             </div>
-                            <div class="form-group">
-                                <p>年级</p>
-                                <div>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="options-grade" id="optionsRadios1" value="大一" checked>大一
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="options-grade" id="optionsRadios2"  value="大二"> 大二
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="options-grade" id="optionsRadios3"  value="大三"> 大三
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="options-grade" id="optionsRadios4"  value="大四"> 大四
-                                    </label>
-                                </div>
+                            <div class="text-right">
+                                <button type="submit" class="btn btn-success center-block">提交</button>
                             </div>
-                            <div class="form-group">
-                                <div class="text-left">
-                                    <button class="btn btn-info">下载报名表</button>
-                                    <label for="file">上传报名表<input type="file" id="file"/></label>
-                                </div>
-                                <div class="text-right">
-                                    <button type="submit" class="btn btn-success center-block">提交</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-
-                </div>
+                        </div>
+                    </form>
             </div>
         </div>
     </main>
@@ -301,6 +290,7 @@
         <div class="container background-light-blue">
             <div class="row">
                 <div class="col-ms-4 col-md-4  col-lg-4" id="address">
+
                     <address>
                         <b>Address</b><br>
                         西南石油大学, 明理楼.<br>
